php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #48200 Compilation fails on mbstring.c
Submitted: 2009-05-09 11:48 UTC Modified: 2010-12-20 12:42 UTC
From: dg at artegic dot de Assigned: jani (profile)
Status: Closed Package: mbstring related
PHP Version: 5.3.0RC2 OS: Solaris 10
Private report: No CVE-ID: None
 [2009-05-09 11:48 UTC] dg at artegic dot de
Description:
------------
Compilation of mbstring.c fails on Sun C 5.9 SunOS_i386 Patch 124868-09 
2009/04/14, independent of compiler settings i.e. "-fast"




Reproduce code:
---------------
CFLAGS="-i -zlazyload -w" \
./configure \
--prefix=/xxx \
--with-config-file-path=/xxx \
--enable-mysqlnd-threading \
--with-mysql=mysqlnd \
--with-mysqli=mysqlnd \
--with-zlib \
--with-openssl=/xxx \
--with-apxs2=/xxx \
--with-curl \
--with-curlwrappers \
--with-pspell \
--with-tidy=/xxx \
--with-iconv \
--with-gd \
--with-jpeg-dir \
--enable-gd-native-ttf \
--with-freetype-dir=/xxx \
--enable-pcntl \
--enable-mbstring \
--enable-zend-multibyte \
--enable-zip \
--without-pear \
--without-sqlite \
--without-sqlite3 \
--without-cdb \
--disable-posix \
--disable-pdo \
--disable-cgi \
--disable-ipv6 \
--disable-json \
--disable-phar


Actual result:
--------------
/bin/sh /home/remote/compile/php5.3-200905090630/libtool --silent --
preserve-dup-deps --mode=compile cc  -Iext/mbstring/ -
I/home/remote/compile/php5.3-200905090630/ext/mbstring/ -DPHP_ATOM_INC 
-I/home/remote/compile/php5.3-200905090630/include -
I/home/remote/compile/php5.3-200905090630/main -
I/home/remote/compile/php5.3-200905090630 -
I/home/remote/compile/php5.3-200905090630/ext/ereg/regex -
I/usr/include/libxml2 -I/usr/sfw/include -I/usr/local/include -
I/home/remote/compile/php5.3-200905090630/ext/date/lib -
I/usr/sfw/include/freetype2 -I/home/remote/compile/php5.3-
200905090630/ext/mbstring/oniguruma -I/home/remote/compile/php5.3-
200905090630/ext/mbstring/libmbfl -I/home/remote/compile/php5.3-
200905090630/ext/mbstring/libmbfl/mbfl -I/usr/include/pspell -
I/home/remote/compile/php5.3-200905090630/TSRM -
I/home/remote/compile/php5.3-200905090630/Zend  -
D_POSIX_PTHREAD_SEMANTICS  -I/usr/include -i -zlazyload -w -DZTS   -c 
/home/remote/compile/php5.3-200905090630/ext/mbstring/mbstring.c -o 
ext/mbstring/mbstring.lo 
"/home/remote/compile/php5.3-200905090630/ext/mbstring/mbstring.c", 
line 4757: undefined symbol: php_mb_encoding_detector
"/home/remote/compile/php5.3-200905090630/ext/mbstring/mbstring.c", 
line 4758: undefined symbol: php_mb_encoding_converter
"/home/remote/compile/php5.3-200905090630/ext/mbstring/mbstring.c", 
line 4759: undefined symbol: php_mb_oddlen
cc: acomp failed for /home/remote/compile/php5.3-
200905090630/ext/mbstring/mbstring.c
*** Error code 1
make: Fatal error: Command failed for target 
`ext/mbstring/mbstring.lo'


Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2009-05-09 21:04 UTC] jani@php.net
Drop this first: CFLAGS="-i -zlazyload -w"
Then get the latest CVS snapshots of both PHP 5.2 and 5.3 branches here:
http://snaps.php.net/ and test your configure line with both. 

 [2009-05-10 07:54 UTC] dg at artegic dot de
No problem compiling php5.2-200905100630, EVEN WITH CFLAGS="-i ..."
(I had to remove the mysql native driver).

Compiling php5.3-200905100630 WITH EMPTY CFLAGS (CFLAGS="") leads to 
the same "undefined symbol" in mbstring.c error.

Compiling WITHOUT ANY CFLAGS didn't work either:

"/home/remote/compile/php5.3-200905100630/ext/mbstring/mbstring.c", 
line 4757: undefined symbol: php_mb_encoding_detector
"/home/remote/compile/php5.3-200905100630/ext/mbstring/mbstring.c", 
line 4757: warning: improper pointer/integer combination: op "="
"/home/remote/compile/php5.3-200905100630/ext/mbstring/mbstring.c", 
line 4758: undefined symbol: php_mb_encoding_converter
"/home/remote/compile/php5.3-200905100630/ext/mbstring/mbstring.c", 
line 4758: warning: improper pointer/integer combination: op "="
"/home/remote/compile/php5.3-200905100630/ext/mbstring/mbstring.c", 
line 4759: undefined symbol: php_mb_oddlen
"/home/remote/compile/php5.3-200905100630/ext/mbstring/mbstring.c", 
line 4759: warning: improper pointer/integer combination: op "="
"/home/remote/compile/php5.3-200905100630/ext/mbstring/mbstring.c", 
line 4787: warning: argument #3 is incompatible with prototype:
 [2009-05-10 19:46 UTC] jani@php.net
This was missing from my build: --enable-zend-multibyte :)
I'll fix this asap.
 [2009-05-10 21:06 UTC] jani@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 [2010-12-20 12:42 UTC] jani@php.net
-Package: Tidy +Package: mbstring related
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Thu Sep 17 04:00:02 2026 UTC