- Fixed bug #48200 (compile failure with mbstring.c when --enable-zend-multibyte is used)